--- a/2018 - Data Fetching in Render/src/index.css
+++ b/2018 - Data Fetching in Render/src/index.css
@@ -1,6 +1,30 @@
+@font-face {
+  font-family: "atc_harris";
+  src: url("./fonts/Black/atcharris-black-webfont.eot");
+  src: url("./fonts/Black/atcharris-black-webfont.eot?#iefix") format("embedded-opentype"),
+    url("./fonts/Black/atcharris-black-webfont.woff2") format("woff2"),
+    url("./fonts/Black/atcharris-black-webfont.woff") format("woff"),
+    url("./fonts/Black/atcharris-black-webfont.ttf") format("truetype"),
+    url("./fonts/Black/atcharris-black-webfont.svg#atc_harrisblack") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "atc_harris";
+  src: url("./fonts/Regular/atcharris-regular-webfont.eot");
+  src: url("./fonts/Regular/atcharris-regular-webfont.eot?#iefix") format("embedded-opentype"),
+    url("./fonts/Regular/atcharris-regular-webfont.woff2") format("woff2"),
+    url("./fonts/Regular/atcharris-regular-webfont.woff") format("woff"),
+    url("./fonts/Regular/atcharris-regular-webfont.ttf") format("truetype"),
+    url("./fonts/Regular/atcharris-regular-webfont.svg#atc_harrisblack") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: atc_harris, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   box-sizing: border-box;
   transition-duration: 0.25s;
   transition-timing-function: ease-out;
@@ -38,4 +62,17 @@ h6 {
   margin: 0;
   padding: 0;
   font-weight: bold;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+code {
+  font-family: inherit;
 }
