--- a/2018 - Data Fetching in Render/src/index.css
+++ b/2018 - Data Fetching in Render/src/index.css
@@ -1,29 +1,5 @@
-@font-face {
-  font-family: "atc_harris";
-  src: url("./fonts/Black/atcharris-black-webfont.eot");
-  src: url("./fonts/Black/atcharris-black-webfont.eot?#iefix") format("embedded-opentype"),
-    url("./fonts/Black/atcharris-black-webfont.woff2") format("woff2"),
-    url("./fonts/Black/atcharris-black-webfont.woff") format("woff"),
-    url("./fonts/Black/atcharris-black-webfont.ttf") format("truetype"),
-    url("./fonts/Black/atcharris-black-webfont.svg#atc_harrisblack") format("svg");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "atc_harris";
-  src: url("./fonts/Regular/atcharris-regular-webfont.eot");
-  src: url("./fonts/Regular/atcharris-regular-webfont.eot?#iefix") format("embedded-opentype"),
-    url("./fonts/Regular/atcharris-regular-webfont.woff2") format("woff2"),
-    url("./fonts/Regular/atcharris-regular-webfont.woff") format("woff"),
-    url("./fonts/Regular/atcharris-regular-webfont.ttf") format("truetype"),
-    url("./fonts/Regular/atcharris-regular-webfont.svg#atc_harrisblack") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
 html {
-  font-family: atc_harris, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
+  font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   box-sizing: border-box;
   transition-duration: 0.25s;
@@ -32,6 +8,7 @@ html {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   font-size: 4vh;
+  font-weight: 300;
 }
 
 *,
@@ -61,7 +38,7 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 a {
